<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="?android:attr/listPreferredItemHeight">

    <ImageView
        android:id="@+id/artist_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_alignParentLeft="true"
        android:scaleType="fitCenter"
        style="@style/list_item_artist_style"
        tools:src="@drawable/ic_spotify"/>

    <TextView
        android:id="@+id/artist_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_toRightOf="@+id/artist_image"
        android:layout_alignTop="@+id/artist_image"
        android:layout_alignBottom="@+id/artist_image"
        android:gravity="center_vertical"
        tools:text="Coldplay"/>
</RelativeLayout>